[NNO-12602] - Добавить возможность отображать подсказку help при наведении курсора